# wasmtime

./: .gitignore  Cargo.toml
.github/workflows/: veri.yml
cranelift/codegen/: build.rs
cranelift/codegen/src/: inst_specs.isle  lib.rs  prelude.isle  prelude_lower.isle
cranelift/codegen/src/isa/aarch64/: inst.isle  inst_specs.isle  lower.isle
cranelift/codegen/src/isa/aarch64/inst/: mod.rs
cranelift/codegen/src/isa/x64/: inst.isle  lower.isle  mod.rs
cranelift/codegen/src/machinst/: isle.rs
cranelift/isle/isle/: Cargo.toml  build.rs
cranelift/isle/isle/isle_examples/pass/: veri_spec.isle
cranelift/isle/isle/src/: ast.rs  compile.rs  error.rs  lexer.rs  lib.rs  parser.rs  printer.rs  sema.rs
cranelift/isle/isle/tests/: run_tests.rs
cranelift/isle/veri/encodings/: convert.py
cranelift/isle/veri/veri_engine/: Cargo.toml  README.md  multi.txt  out  out.txt  wasm1.txt
cranelift/isle/veri/veri_engine/examples/broken/: broken_32_general_rotl_to_rotr.isle  broken_fits_in_16_rotl_to_rotr.isle  broken_fits_in_16_with_imm_rotl_to_rotr.isle  broken_mask_small_rotr.isle  broken_rule_or_small_rotr.isle
cranelift/isle/veri/veri_engine/examples/broken/iadd/: broken_add_extend.isle  broken_imm12.isle  broken_imm12_2.isle  broken_imm12neg.isle  broken_imm12neg2.isle  broken_shift.isle  broken_shift2.isle
cranelift/isle/veri/veri_engine/examples/broken/isub/: broken_imm12.isle  broken_imm12neg.isle  broken_imm12neg_not_distinct.isle  broken_shift.isle
cranelift/isle/veri/veri_engine/examples/broken/shifts/: broken_do_shift_32.isle  broken_ishl_to_do_shift_64.isle  broken_sshr_to_do_shift_fits_in_32.isle  broken_ushr_to_do_shift_fits_in_32.isle
cranelift/isle/veri/veri_engine/examples/broken/udiv/: udiv_cve_underlying.isle
cranelift/isle/veri/veri_engine/examples/iadd/: updated_iadd_imm12neg_left.isle  updated_iadd_imm12neg_right.isle  updated_imm12_from_negated_value.isle
cranelift/isle/veri/veri_engine/examples/icmp/: icmp_to_lower_icmp.isle  lower_icmp_32_64.isle  lower_icmp_const_32_64.isle  lower_icmp_const_32_64_imm.isle  lower_icmp_const_32_64_sgte.isle  lower_icmp_const_32_64_ugte.isle  lower_icmp_fits_in_16_signed.isle
cranelift/isle/veri/veri_engine/examples/isub/: imm12neg_new.isle
cranelift/isle/veri/veri_engine/examples/mid-end/: broken_bor_band_consts.isle  broken_ireduce.isle
cranelift/isle/veri/veri_engine/examples/x86/: amode_add_shl.isle  amode_add_uextend_shl.isle
cranelift/isle/veri/veri_engine/isle-tmp/: clif_lower.isle  settings.rs
cranelift/isle/veri/veri_engine/scripts/: cdf.py  wasm1.0-to-aarch64.py
cranelift/isle/veri/veri_engine/src/: annotations.rs  emit.rs  isla.rs  lib.rs  main.rs  solver.rs  type_inference.rs  verify.rs  widths.rs  x64.rs
cranelift/isle/veri/veri_engine/src/solver/encoded_ops/: cls.rs  clz.rs  mod.rs  rev.rs  subs.rs
cranelift/isle/veri/veri_engine/tests/: veri.rs
cranelift/isle/veri/veri_engine/tests/code/selfcontained/: let.isle  prelude.isle  simple_prelude.isle
cranelift/isle/veri/veri_engine/tests/utils/: mod.rs
cranelift/isle/veri/veri_engine/veri-isle-clif-gen/: inst_builder.rs
cranelift/isle/veri/veri_engine/wasm-1.0-to-aarch64-tests/: expected_success_tests.txt  expected_timeout_tests.txt
cranelift/isle/veri/veri_ir/src/: annotation_ir.rs  lib.rs
(+2 files in other folders)
