[package]
name = "veri_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "veri_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "veri_engine_bin"
path = "src/main.rs"

[[bin]]
name = "isla"
path = "src/isla.rs"

[[bin]]
name = "emit"
path = "src/emit.rs"

[dependencies]
cranelift-isle = { path = "../../isle" }
cranelift-codegen = { path = "../../../codegen" }
cranelift-reader = { path = "../../../reader" }
cranelift-codegen-meta = { path = "../../../codegen/meta" }
isla-lib = { git = "https://github.com/rems-project/isla.git", rev = "4134411c0f463807edd788f67b3db34c1899d9b6" }
anyhow = { workspace = true }
veri_ir = { path = "../veri_ir" }
easy-smt = { git = "https://github.com/elliottt/easy-smt.git" }
clap = { version = "3.0.0", features = ["derive"] }
itertools = "0.10.3"
log = "0.4.17"
env_logger = "0.10.0"
retry = "2.0.0"
sha2 = "0.8.1"
crossbeam = "0.8.1"

[dev-dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"

[features]
default = ["cranelift-codegen/all-arch", "cranelift-codegen/trace-log"]
